k8s/ingress-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nftytribe-client-ingress
  annotations:
    cert-manager.io/cluster-issuer: "nftytribe-client-letsencrypt"
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - staging.nftytribe.io
      secretName: nftytribe-tls
  rules:
    - host: staging.nftytribe.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nftytribe-client-cluster-ip-service
                port:
                  number: 3001
